Fixed tweet username and date alignment to make it look better on smaller devices

--- a/flasksite/static/NHLmain.css
+++ b/flasksite/static/NHLmain.css
@@ -446,11 +446,13 @@ hr {
 .tweet-username {
   font-size: 1.2rem;
   display: flex;
+  justify-content: center;
 }
 
 .tweet-date {
   font: 0.45em;
   display: flex;
+  justify-content: center;
 }
 
 .tweet-text {
